tests/snapshots/snapshot_test_assigned_tasks_preload__app_startup_with_preloaded_tasks.snap
---
source: tests/snapshot_test_assigned_tasks_preload.rs
expression: snapshot
---
┌Assigned Tasks────────────────────────────────────────────────────────────────┐
┌ Navigation ────────────────┐┌ Tasks ─────────────────────────────────────────┐
│▸ 👤  Assigned to Me (3)     ││▸ [•] - Fix bug in task filtering               │
│  📬  Inbox                  ││  [•] - Review Q2 planning doc                  │
│  WS Test Workspace         ││  [•] - Update API documentation                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Loaded 3 assigned task(s) from cache                                          │
└──────────────────────────────────────────────────────────────────────────────┘
