tests/snapshots/snapshot_test_assigned_tasks_preload__assigned_tasks_preloaded_count_badge.snap
---
source: tests/snapshot_test_assigned_tasks_preload.rs
expression: snapshot
---
┌ Navigation ──────────────────────────┐
│▸ 👤  Assigned to Me (3)               │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
