tests/snapshots/snapshot_test_assigned_tasks_preload__assigned_tasks_preloaded_empty.snap
---
source: tests/snapshot_test_assigned_tasks_preload.rs
expression: snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
