tests/snapshots/snapshot_test_assigned_tasks_preload__assigned_tasks_preloaded_from_api.snap
---
source: tests/snapshot_test_assigned_tasks_preload.rs
expression: snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│▸ [•] - Review Q2 planning doc                            │
│  [•] - Fix bug in task filtering                         │
│  [•] - Update API documentation                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
