tests/snapshots/snapshot_test_assigned_tasks_preload__assigned_tasks_preloaded_from_cache.snap
---
source: tests/snapshot_test_assigned_tasks_preload.rs
expression: snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│▸ [•] - Fix bug in task filtering                         │
│  [•] - Review Q2 planning doc                            │
│  [•] - Update API documentation                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
