tests/snapshots/snapshot_test_assigned_tasks_preload__assigned_tasks_preloaded_initial_cache.snap
---
source: tests/snapshot_test_assigned_tasks_preload.rs
expression: initial_snapshot
---
┌ Tasks ───────────────────────────────────────────────────┐
│▸ [•] - Test Task                                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
